# ros2-robot-full-simulation-stack

./: LICENSE  README.md  frames_2025-05-02_16.39.58.gv
src/dd_robot/: package.xml  setup.py
src/dd_robot/config/: diff_drive_controller_velocity.yaml
src/dd_robot/launch/: dd_robot_gazebo.launch.py  dd_robot_rviz.launch.py  display.launch.py  robot.launch.py
src/dd_robot/maps/: empty_map.yaml
src/dd_robot/rviz/: navigation_config.rviz
src/dd_robot/scripts/: follow_waypoints.py  gotogoal.py
src/dd_robot/urdf/: dd_robot.xacro  dd_robot2.urdf  ddrobot.urdf  robot.xacro
src/dd_robot/worlds/: empty_world.world
src/my_robot_description/: package.xml
